[package]
name = "acuity-dex-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bip39 = { version = "2.0.0", features = ["rand"] }
clap = "4.4.18"
itertools = "0.12.1"
subxt = "0.34.0"
subxt-signer = "0.34.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "0.21.0"
tracing = "0.1.40"
